[gd_scene load_steps=2 format=3 uid="uid://dxtii2gk75v7s"]

[ext_resource type="Script" path="res://scenes/hud_0.gd" id="1_tlsm6"]

[node name="HUD0" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlsm6")
metadata/_edit_vertical_guides_ = [1112.0]

[node name="Debug" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeft" type="VBoxContainer" parent="Debug"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -106.0
offset_right = 209.0
offset_bottom = 106.0
grow_vertical = 2
theme_override_constants/separation = 4

[node name="CameraXAngleLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Camera X Angle: "

[node name="CameraYAngleLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Camera Y Angle: "

[node name="GyroLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Gyroscope: "

[node name="CalibratedGyroLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Calibrated Gyroscope: "

[node name="AccelLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Accelerometer: "

[node name="GravityLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Sensor Fusion Gravity: "

[node name="GyroNoiseLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Gyroscope Noise: "

[node name="AccelNoiseLabel" type="Label" parent="Debug/TopLeft"]
layout_mode = 2
text = "Accelerometer Noise: "

[node name="TopRight" type="VBoxContainer" parent="Debug"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_constants/separation = 4

[node name="PlatformLabel" type="Label" parent="Debug/TopRight"]
layout_mode = 2
text = "Platform: "
horizontal_alignment = 2

[node name="GyroCalibrationOffsetLabel" type="Label" parent="Debug/TopRight"]
layout_mode = 2
text = "Calibration Offset: (0, 0, 0)"
horizontal_alignment = 2

[node name="GyroCalibrationSamplesLabel" type="Label" parent="Debug/TopRight"]
layout_mode = 2
text = "Calibration Samples: 0"
horizontal_alignment = 2

[node name="GyroCalibrationTimerLabel" type="Label" parent="Debug/TopRight"]
layout_mode = 2
text = "Calibration Timer: 0"
horizontal_alignment = 2

[node name="GyroCalibratingLabel" type="Label" parent="Debug/TopRight"]
layout_mode = 2
text = "Calibrating: false"
horizontal_alignment = 2
